--- a/charts/stable/photoprism/values.yaml
+++ b/charts/stable/photoprism/values.yaml
@@ -13,7 +13,7 @@ env:
   HOME: "/photoprism"
   PHOTOPRISM_ORIGINALS_PATH: "/photoprism/originals"
   PHOTOPRISM_IMPORT_PATH: "/photoprism/import"
-  PHOTOPRISM_TEMP_PATH: "/photoprism/temp"
+  PHOTOPRISM_TEMP_PATH: "/photoprism_temp"
   PHOTOPRISM_STORAGE_PATH: "/assets/storage"
   PHOTOPRISM_SIDECAR_PATH: "/assets/sidecar"
   PHOTOPRISM_CACHE_PATH: "/assets/cache"
@@ -48,7 +48,7 @@ persistence:
     mountPath: "/assets"
   temp:
     enabled: true
-    mountPath: "/photoprism/temp"
+    mountPath: "/photoprism_temp"
     type: emptyDir
 
 mariadb:
