fix(photoprism): don't overwrite `temp` key from common

--- a/charts/stable/photoprism/questions.yaml
+++ b/charts/stable/photoprism/questions.yaml
@@ -85,7 +85,7 @@ questions:
             type: dict
             attrs:
 # Include{persistenceBasic}
-        - variable: temp
+        - variable: photoprism_temp
           label: "App Temp Files"
           description: "Stores the Application Temp Files."
           schema:
