--- a/.github/workflows/secgen.yaml
+++ b/.github/workflows/secgen.yaml
@@ -109,14 +109,14 @@ jobs:
               echo "sanitising website output for ${chartname}..."
               rm -rf ${chart}/render
               sed -i 's|<br>|<br />|g' website/docs/charts/${train}/${chartname}/helm-security.md
-              sed -i 's|<br>|<br />|g' website/docs/charts/${train}/${chartname}/container-security.md
+              # sed -i 's|<br>|<br />|g' website/docs/charts/${train}/${chartname}/container-security.md
               sed -i 's|<hr>|<hr />|g' website/docs/charts/${train}/${chartname}/helm-security.md
-              sed -i 's|<hr>|<hr />|g' website/docs/charts/${train}/${chartname}/container-security.md
+              # sed -i 's|<hr>|<hr />|g' website/docs/charts/${train}/${chartname}/container-security.md
               }
           for train in enterprise stable incubator dependency; do
             echo "Processing Charts for Train: ${train}..."
             for chart in $(ls "charts/${train}"); do
-              render "charts/${train}/${chart}" ${chart} ${train} && helm_sec_scan "charts/${train}/${chart}" ${chart} ${train} && container_sec_scan "charts/${train}/${chart}" ${chart} ${train} && cleanfiles "charts/${train}/${chart}" ${chart} ${train} || echo "processing failed for ${chart}"
+              render "charts/${train}/${chart}" ${chart} ${train} && helm_sec_scan "charts/${train}/${chart}" ${chart} ${train} && cleanfiles "charts/${train}/${chart}" ${chart} ${train} || echo "processing failed for ${chart}"
             done
           done
           echo "finsihed security scan"
