--- a/charts/stable/photoprism/values.yaml
+++ b/charts/stable/photoprism/values.yaml
@@ -46,7 +46,7 @@ persistence:
   storage:
     enabled: true
     mountPath: "/assets"
-  photoprism_temp:
+  photoprismtemp:
     enabled: true
     mountPath: "/photoprism_temp"
     type: emptyDir
