--- a/charts/incubator/invidious/questions.yaml
+++ b/charts/incubator/invidious/questions.yaml
@@ -1113,7 +1113,7 @@ questions:
                       schema:
                         type: string
                         required: true
-                        valid_chars: '^[0-9]+(\.[0-9]*)?$'
+                        valid_chars: '^[0-9]+(\.[0-9]{1,2})?$'
                         default: "1.00"
                     - variable: volume
                       label: Volume
