--- a/charts/incubator/plik/Chart.yaml
+++ b/charts/incubator/plik/Chart.yaml
@@ -4,6 +4,10 @@ dependencies:
   - name: common
     repository: https://library-charts.truecharts.org
     version: 11.0.7
+  - condition: postgresql.enabled
+    name: postgresql
+    repository: https://charts.truecharts.org/
+    version: 11.0.11
 deprecated: false
 description: A scalable file uploading system with multiple backends.
 home: https://truecharts.org/docs/charts/stable/plik
@@ -21,7 +25,7 @@ sources:
   - https://github.com/truecharts/charts/tree/master/charts/stable/plik
   - https://github.com/root-gg/plik
 type: application
-version: 13.0.27
+version: 0.0.1
 annotations:
   truecharts.org/catagories: |
     - files
