--- a/charts/incubator/plik/templates/common.yaml
+++ b/charts/incubator/plik/templates/common.yaml
@@ -1,1 +1,7 @@
-{{ include "tc.common.loader.all" . }}
+{{/* Make sure all variables are set properly */}}
+{{- include "tc.common.loader.init" . }}
+
+{{/* Render config */}}
+{{- include "plik.secret" . }}
+
+{{ include "tc.common.loader.apply" . }}
