--- a/charts/incubator/plik/values.yaml
+++ b/charts/incubator/plik/values.yaml
@@ -85,7 +85,8 @@ persistence:
     readOnly: true
     volumeSpec:
       secret:
-        name: '{{ include "tc.common.names.fullname" . }}-plik-secret'
+        secretName: '{{ include "tc.common.names.fullname" . }}-plik-secret'
+        defaultMode: "0600"
 
 postgresql:
   enabled: true
