--- a/.github/workflows/daily.yaml
+++ b/.github/workflows/daily.yaml
@@ -95,6 +95,7 @@ jobs:
             for chart in $(ls "charts/${train}"); do
               echo "Correcting Chart.yaml for Chart: ${chart}..."
               sync_tag "charts/${train}/${chart}" "${chart}" "${train}"
+            done
           done
           
       - name: Cleanup
