--- a/charts/incubator/plik/values.yaml
+++ b/charts/incubator/plik/values.yaml
@@ -3,9 +3,6 @@ image:
   pullPolicy: IfNotPresent
   tag: 1.3.6@sha256:f9c31219bfb0793c3b9ce4ec304cd52c4dfef106ae452ab0f6a57a0a0b575fbd
 
-# securityContext:
-#   readOnlyRootFilesystem: false
-
 plik:
   general:
     debug: false
@@ -71,6 +68,17 @@ service:
       main:
         protocol: HTTP
         port: 10599
+
+probes:
+  liveness:
+    type: HTTP
+    path: /
+  readiness:
+    type: HTTP
+    path: /
+  startup:
+    type: HTTP
+    path: /
 
 persistence:
   data:
