--- a/.github/workflows/daily.yaml
+++ b/.github/workflows/daily.yaml
@@ -115,7 +115,7 @@ jobs:
           
   generate-security-reports:
     runs-on: ubuntu-latest
-    name: Generate Security Reports"
+    name: "Generate Security Reports"
     container:
       image: ghcr.io/truecharts/devcontainer:v3.1.1@sha256:f0ecaa533663f88346b745eb497f6f6acf63561ad88e345cd71c8280963b8c1e
     steps:
