Apply suggestions from code review
Signed-off-by: Stavros Kois <47820033+stavros-k@users.noreply.github.com>

--- a/charts/incubator/jackett2telegram/questions.yaml
+++ b/charts/incubator/jackett2telegram/questions.yaml
@@ -19,6 +19,7 @@ questions:
           schema:
             type: string
             required: true
+            private: true
             default: ""
         - variable: CHATID
           label: Chat ID
@@ -40,6 +41,7 @@ questions:
           description: Delay in seconds.
           schema:
             type: int
+            required: true
             default: 600
 # Include{containerConfig}
 # Include{serviceExpertRoot}
