--- a/charts/incubator/jackett2telegram/values.yaml
+++ b/charts/incubator/jackett2telegram/values.yaml
@@ -4,7 +4,7 @@ image:
   tag: 1.9.0@sha256:efc57e6a18dd7f6895a75202874f22a15091f93de25f4cbd53fdf8e144e86fef
 
 secretEnv:
-  # TOKEN: ""
+  TOKEN: ""
   CHATID: ""
 
 env:
