--- a/charts/incubator/frigate/values.yaml
+++ b/charts/incubator/frigate/values.yaml
@@ -20,15 +20,15 @@ global:
 # - All of the frigate app config is in the questions, so we don't need to default any of it here
 frigate:
   mqtt:
-    host: ""
-    port: ""
+    host: mqtt.server.com
+    port: 1883
     # -- NOTE: Must be unique if you are running multiple instances
-    topic_prefix: ""
+    topic_prefix: frigate
     # -- NOTE: Must be unique if you are running multiple instances
-    client_id: ""
-    user: ""
-    password: ""
-    stats_interval: ""
+    client_id: frigate
+    user: mqtt_user
+    password: password
+    stats_interval: 60
 
   detectors:
     # -- Enable it to add the configuration in the config file
@@ -48,13 +48,13 @@ frigate:
     # -- Enable it to add the configuration in the config file
     render_config: false
     # -- Optional: Path to the model
-    path: ""
+    path: /edgetpu_model.tflite
     # -- Optional: Path to the labelmap
-    labelmap_path: ""
+    labelmap_path: /labelmap.txt
     # -- Required: Object detection model input width
-    width: ""
+    width: 320
     # -- Required: Object detection model input height
-    height: ""
+    height: 320
     # -- Optional: Label name modifications.
     labelmap:
       []
@@ -67,11 +67,11 @@ frigate:
     # -- Enable it to add the configuration in the config file
     render_config: false
     # -- Optional: Default log verbosity (default: shown below)
-    default: ""
+    default: info
     # -- Optional: Component specific logger overrides
     logs:
-      - component: ""
-        verbosity: ""
+      - component: frigate.event
+        verbosity: debug
 
   birdseye:
     # -- Enable it to add the configuration in the config file
@@ -79,36 +79,36 @@ frigate:
     # -- Enables birdseye
     enabled: true
     # -- Optional: Width of the output resolution
-    width: ""
+    width: 1280
     # -- Optional: Height of the output resolution
-    height: ""
+    height: 720
     # -- Optional: Encoding quality of the mpeg1 feed
     # - 1 is the highest quality, and 31 is the lowest. Lower quality feeds utilize less CPU resources.
-    quality: ""
+    quality: 8
     # -- Optional: Mode of the view. Available options are: objects, motion, and continuous
     # - objects - cameras are included if they have had a tracked object within the last 30 seconds
     # - motion - cameras are included if motion was detected in the last 30 seconds
     # - continuous - all cameras are included always
-    mode: ""
+    mode: objects
 
   ffmpeg:
     # -- Enable it to add the configuration in the config file
     render_config: false
     # -- Optional: global ffmpeg args
-    global_args: ""
+    global_args: -hide_banner -loglevel warning
     # -- Optional: global input args
-    input_args: ""
+    input_args: -avoid_negative_ts make_zero -fflags +genpts+discardcorrupt -rtsp_transport tcp -timeout 5000000 -use_wallclock_as_timestamps 1
     # -- Optional: global hwaccel args
     # - NOTE: See hardware acceleration docs for your specific device
     hwaccel_args: ""
     # -- Optional: global output args
     output_args:
       # -- Optional: output args for detect streams
-      detect: ""
+      detect: -f rawvideo -pix_fmt yuv420p
       # -- Optional: output args for record streams
-      record: ""
+      record: -f segment -segment_time 10 -segment_format mp4 -reset_timestamps 1 -strftime 1 -c copy -an
       # -- Optional: output args for rtmp streams
-      rtmp: ""
+      rtmp: -c copy -f flv
 
   detect:
     # -- Enable it to add the configuration in the config file
@@ -117,22 +117,22 @@ frigate:
     # - This value can be set via MQTT and will be updated in startup based on retained value
     enabled: true
     # -- Optional: width of the frame for the input with the detect role
-    width: ""
+    width: 1280
     # -- Optional: height of the frame for the input with the detect role
-    height: ""
+    height: 720
     # -- Optional: desired fps for your camera for the input with the detect role
     # - NOTE: Recommended value of 5. Ideally, try and reduce your FPS on the camera.
-    fps: ""
+    fps: 5
     # -- Optional: Number of frames without a detection before frigate considers an object to be gone. (default: 5x the frame rate)
-    max_disappeared: ""
+    max_disappeared: 25
     # -- Optional: Configuration for stationary object tracking
     stationary:
       # -- Optional: Frequency for confirming stationary objects
       # - When set to 0, object detection will not confirm stationary objects until movement is detected.
       # - If set to 10, object detection will run to confirm the object still exists on every 10th frame.
-      interval: ""
+      interval: 0
       # -- Optional: Number of frames without a position change for an object to be considered stationary (default: 10x the frame rate or 10s)
-      threshold: ""
+      threshold: 50
       # -- Optional: Define a maximum number of frames for tracking a stationary object (default: not set, track forever)
       # - This can help with false positives for objects that should only be stationary for a limited amount of time.
       # - It can also be used to disable stationary object tracking. For example, you may want to set a value for person, but leave
@@ -153,11 +153,11 @@ frigate:
     render_config: false
     # -- Optional: list of objects to track from labelmap.txt
     track:
-    #  - person
+      - person
     # -- Optional: mask to prevent all object types from being detected in certain areas (default: no mask)
     # - Checks based on the bottom center of the bounding box of the object.
     # - NOTE: This mask is COMBINED with the object type specific mask below
-    mask: ""
+    mask: 0,0,1000,0,1000,200,0,200
     # - Optional: filters to reduce false positives for specific object types
     filters:
       []
@@ -184,7 +184,7 @@ frigate:
     # -- Optional: The threshold passed to cv2.threshold to determine if a pixel is different enough to be counted as motion.
     # - Increasing this value will make motion detection less sensitive and decreasing it will make motion detection more sensitive.
     # - The value should be between 1 and 255.
-    threshold: ""
+    threshold: 25
     # -- Optional: Minimum size in pixels in the resized motion image that counts as motion
     # - Increasing this value will prevent smaller areas of motion from being detected. Decreasing will
     # - make motion detection more sensitive to smaller moving objects.
@@ -192,29 +192,29 @@ frigate:
     # - 15 - high sensitivity
     # - 30 - medium sensitivity
     # - 50 - low sensitivity
-    contour_area: ""
+    contour_area: 30
     # -- Optional: Alpha value passed to cv2.accumulateWeighted when averaging the motion delta across multiple frames
     # - Higher values mean the current frame impacts the delta a lot, and a single raindrop may register as motion.
     # - Too low and a fast moving person wont be detected as motion.
-    delta_alpha: ""
+    delta_alpha: "0.2"
     # -- Optional: Alpha value passed to cv2.accumulateWeighted when averaging frames to determine the background
     # - Higher values mean the current frame impacts the average a lot, and a new object will be averaged into the background faster.
     # - Low values will cause things like moving shadows to be detected as motion for longer.
     # - https://www.geeksforgeeks.org/background-subtraction-in-an-image-using-concept-of-running-average/
-    frame_alpha: ""
+    frame_alpha: "0.2"
     # -- Optional: Height of the resized motion frame  (default: 50)
     # - This operates as an efficient blur alternative. Higher values will result in more granular motion detection at the expense
     # - of higher CPU usage. Lower values result in less CPU, but small changes may not register as motion.
-    frame_height: ""
+    frame_height: 50
     # -- Optional: motion mask
     # - NOTE: see docs for more detailed info on creating masks
-    mask: ""
+    mask: 0,900,1080,900,1080,1920,0,1920
     # -- Optional: improve contrast
     # - Enables dynamic contrast improvement. This should help improve night detections at the cost of making motion detection more sensitive
     # - for daytime.
-    improve_contrast: ""
+    improve_contrast: false
     # -- Optional: Delay when updating camera motion through MQTT from ON -> OFF
-    mqtt_off_delay: ""
+    mqtt_off_delay: 30
 
   record:
     # -- Enable it to add the configuration in the config file
@@ -229,7 +229,7 @@ frigate:
     enabled: false
     # -- Optional: Number of minutes to wait between cleanup runs
     # - This can be used to reduce the frequency of deleting recording segments from disk if you want to minimize i/o
-    expire_interval: ""
+    expire_interval: 60
     # -- Optional: Retention settings for recording
     retain:
       # -- Render retain config
@@ -237,19 +237,21 @@ frigate:
       # -- Optional: Number of days to retain recordings regardless of events
       # - NOTE: This should be set to 0 and retention should be defined in events section below
       # - if you only want to retain recordings of events.
-      days: ""
+      days: 0
       # -- Optional: Mode for retention. Available options are: all, motion, and active_objects
       # - all - save all recording segments regardless of activity
       # - motion - save all recordings segments with any detected motion
       # - active_objects - save all recording segments with active/moving objects
       # - NOTE: this mode only applies when the days setting above is greater than 0
-      mode: ""
+      mode: all
     # -- Optional: Event recording settings
     events:
+      # -- Enable it to add the configuration in the config file
+      render_config: false
       # -- Optional: Number of seconds before the event to include
-      pre_capture: ""
+      pre_capture: 5
       # -- Optional: Number of seconds after the event to include
-      post_capture: ""
+      post_capture: 5
       # -- Optional: Objects to save recordings for. Defaults to all
       objects:
         []
@@ -261,16 +263,16 @@ frigate:
         # -- Render retain config
         render_config: false
         # -- Required: Default retention days
-        default: ""
+        default: 10
         # -- Optional: Mode for retention.
         # - all - save all recording segments for events regardless of activity
         # - motion - save all recordings segments for events with any detected motion
         # - active_objects - save all recording segments for event with active/moving objects
-        mode: ""
+        mode: motion
         # -- Optional: Per object retention days
         objects:
-          - object: ""
-            days: ""
+          - object: person
+            days: 15
 
   snapshots:
     # -- Enable it to add the configuration in the config file
@@ -279,13 +281,13 @@ frigate:
     # - This value can be set via MQTT and will be updated in startup based on retained value
     enabled: false
     # -- Optional: Save a clean PNG copy of the snapshot image
-    clean_copy: ""
+    clean_copy: true
     # -- Optional: print a timestamp on the snapshots
-    timestamp: ""
+    timestamp: false
     # -- Optional: draw bounding box on the snapshots
-    bounding_box: ""
+    bounding_box: false
     # -- Optional: crop the snapshot
-    crop: ""
+    crop: false
     # -- Optional: height to resize the snapshot to (default: original size)
     height:
     # -- Optional: Restrict snapshots to objects that entered any of the listed zones (default: no required zones)
@@ -295,11 +297,11 @@ frigate:
       # -- Render retain config
       render_config: false
       # -- Required: Default retention days (default: shown below)
-      default: ""
+      default: 10
       # -- Optional: Per object retention days
       objects:
-        - object: ""
-          days: ""
+        - object: person
+          days: 15
 
   rtmp:
     # -- Enable it to add the configuration in the config file
@@ -313,30 +315,31 @@ frigate:
     # -- Optional: Set the height of the live stream. (default: 720)
     # - This must be less than or equal to the height of the detect stream. Lower resolutions
     # - reduce bandwidth required for viewing the live stream. Width is computed to match known aspect ratio.
-    height: ""
+    height: 720
     # -- Optional: Set the encode quality of the live stream (default: shown below)
     # - 1 is the highest quality, and 31 is the lowest. Lower quality feeds utilize less CPU resources.
-    quality: ""
+    quality: 8
 
   timestamp_style:
     # -- Enable it to add the configuration in the config file
     render_config: false
     # -- Optional: Position of the timestamp
     # - "tl" (top left), "tr" (top right), "bl" (bottom left), "br" (bottom right)
-    position: ""
+    position: "tl"
     # -- Optional: Format specifier conform to the Python package "datetime"
     # - Additional Examples:
     # - german: "%d.%m.%Y %H:%M:%S"
-    format: ""
+    format: "%m/%d/%Y %H:%M:%S"
     # -- Optional: Color of font
     color:
-      # -- All Required when color is specified (default: shown below)
+      # -- Enable it to add the configuration in the config file
       render_config: false
-      red: ""
-      green: ""
-      blue: ""
+      # -- All Required when color is specified (default: shown below)
+      red: 255
+      green: 255
+      blue: 255
     # -- Optional: Line thickness of font (default: shown below)
-    thickness: ""
+    thickness: 2
     # -- Optional: Effect of lettering (default: shown below)
     # - None (No effect),
     # - "solid" (solid background in inverse color of font)
@@ -374,7 +377,7 @@ frigate:
         output_args:
       # -- Optional: timeout for highest scoring image before allowing it
       # - to be replaced by a newer image.
-      best_image_timeout: ""
+      best_image_timeout: 60
       # -- Optional: zones for this camera
       zones:
         # -- Required: name of the zone
@@ -382,17 +385,17 @@ frigate:
         - name: front_steps
           # -- Required: List of x,y coordinates to define the polygon of the zone.
           # - NOTE: Presence in a zone is evaluated only based on the bottom center of the objects bounding box.
-          coordinates: ""
+          coordinates: 545,1077,747,939,788,805
           # -- Optional: List of objects that can trigger this zone (default: all tracked objects)
           objects:
-          #  - person
+            - person
           # -- Optional: Zone level object filters.
           # -NOTE: The global and camera filters are applied upstream.
           filters:
-            - object: ""
-              min_area: ""
-              max_area: ""
-              threshold: ""
+            - object: person
+              min_area: 5000
+              max_area: 100000
+              threshold: "0.7"
       # -- Optional: Configuration for the jpg snapshots published via MQTT
       mqtt:
         # -- Enable it to add the configuration in the config file
@@ -402,15 +405,15 @@ frigate:
         # - All other messages will still be published.
         enabled: true
         # -- Optional: print a timestamp on the snapshots
-        timestamp: ""
+        timestamp: true
         # -- Optional: draw bounding box on the snapshots
-        bounding_box: ""
+        bounding_box: true
         # -- Optional: crop the snapshot
-        crop: ""
+        crop: true
         # -- Optional: height to resize the snapshot to
-        height: ""
+        height: 270
         # -- Optional: jpeg encode quality
-        quality: ""
+        quality: 70
         # -- Optional: Restrict mqtt messages to objects that entered any of the listed zones
         required_zones: []
       # -- Optional: Configuration for how camera is handled in the GUI.
@@ -419,9 +422,9 @@ frigate:
         render_config: false
         # -- Optional: Adjust sort order of cameras in the UI. Larger numbers come later
         # - By default the cameras are sorted alphabetically.
-        order: ""
+        order: 0
         # -- Optional: Whether or not to show the camera in the Frigate UI
-        dashboard: ""
+        dashboard: true
 
 ingress:
   rtmp:
